# smalltalk-jit

./: .gitignore  CMakeLists.txt  LICENSE.txt  PORTING.md  README.md  build.sh  history.txt  hsdump.txt  hsdump2.txt  hsdump3.txt  main.c  prompt.txt  run_benchmarks.sh  run_tests.sh  smalltalk_snap  snapshot  yldump.txt
benchmarks/: DeltaBlue.st  FloatBench.st  README.md  Richards.st
buld/: CMakeCache.txt  Makefile  cmake_install.cmake  st
devimage/: package.st
docs/: jit-profiling.md  namespaces.md  packages.md
samples/: 01_hello_world.st  02_numbers.st  03_control_flow.st  04_blocks_closures.st  05_collections.st  06_strings.st  07_classes.st  08_exceptions.st  09_recursion.st  10_fizzbuzz.st  11_sieve_primes.st  12_sorting.st  13_bank_account.st  14_linked_list.st  15_stack_queue.st  16_temperature.st  17_mandelbrot.st  18_word_frequency.st  19_roman_numerals.st  20_rpn_calculator.st  README.md  package.st
samples/advanced/: 01_mediator.st  02_observer.st  03_strategy.st  04_state.st  05_composite.st  06_visitor.st  07_command.st  08_decorator.st  09_chain_of_responsibility.st  10_game_of_life.st  11_task_scheduler.st
samples/concurrency/: 01_channels.st  02_actors_intro.st  03_user_registry.st  04_webserver.st  05_business_card_api.st  06_business_card_server.st  07_mediator_cqrs.st
samples/projects/: README.md
samples/projects/hello/: package.st
samples/projects/namespaces/: package.st
samples/projects/store/: package.st
scripts/: check-image-idempotence.sh
scripts/ppc64/: build-nocmake.sh  cross-test.sh  emu-test.sh  golden-oracle.sh
smalltalk/: ArithmeticError.st  Base64.st  Block.st  EmptyCollectionError.st  Exception.st  FileSourceCode.st  GarbageCollector.st  HandlerEscape.st  InvalidArgumentError.st  Json.st  NotYetImplementedError.st  Object.st  System.st  TestRun.st  UndefinedObject.st  Uuid.st  Warning.st
smalltalk/Actors/: Actor.st  ActorContext.st  ActorSystem.st  Future.st  Mailbox.st  Pid.st  Props.st  SystemMessages.st
smalltalk/Collections/: ArrayedCollection.st  Association.st  Bag.st  ByteArray.st  Collection.st  Dictionary.st  HashedCollection.st  IdentityDictionary.st  Interval.st  OrderedCollection.st  Queue.st  SequenceableCollection.st  Set.st  SortedCollection.st  String.st  Symbol.st
smalltalk/Compiler/: Compiler.st
smalltalk/Concurrency/: Atomic.st  Channel.st  ConcurrentDictionary.st  Isolate.st  Semaphore.st  SharedDictionary.st  Worker.st
smalltalk/Files/: Directory.st  File.st
smalltalk/Http/: HttpConnection.st  HttpRequest.st  HttpResponse.st
smalltalk/Magnitudes/: Character.st  DateTime.st  Float.st  Fraction.st  Integer.st  LargeInteger.st  LargeNegativeInteger.st  LargePositiveInteger.st  Number.st  ScaledDecimal.st  SmallFloat64.st  SmallInteger.st  Stopwatch.st
smalltalk/Parser/: BlockScope.st
smalltalk/Processes/: Actor.st  Channel.st  Delay.st  ProcessorScheduler.st
smalltalk/Streams/: CollectionStream.st  ExternalStream.st  Socket.st  Stream.st
smalltalk/Streams/Http/: HttpClient.st  HttpConnection.st  HttpRequest.st  HttpResponse.st  HttpRouter.st  (+1 more)
tests/: ActorStressTest.st  ActorTest.st  ActorUnitTest.st  ArrayTest.st  AssociationTest.st  AtomicArrayTest.st  AtomicStressTest.st  AtomicTest.st  BagTest.st  Base64Test.st  BehaviorTest.st  BigMethodTest.st  BlockClosureTest.st  BlockTest.st  BooleanGlobalTest.st  ByteArrayTest.st  ChannelMultiWorkerTest.st  ChannelStressTest.st  ChannelTest.st  CharacterEnrichmentTest.st  CharacterProtocolTest.st  CharacterTest.st  ClassExtensionTest.st  ClassRedefineJitTest.st  CollectionEnrichmentTest.st  CollectionExtrasTest.st  CollectionStreamTest.st  CompiledMethodTest.st  CompilerErrorTest.st  CompilerTest.st  ConcurrentDictionaryTest.st  ContextTest.st  ControlFlowTest.st  DateTimeArithmeticTest.st  DateTimeTest.st  DelayTest.st  DictionaryEnrichmentTest.st  DictionaryTest.st  DivideByZeroTest.st  DurationTest.st  (+94 more)
vm/: Assembler.h  AssemblerX64.h  Ast.h  Bootstrap.c  Cli.h  CodeGenerator.h  CodeGeneratorX64.c  Collection.c  CompiledCode.c  CompiledCode.h  Compiler.c  Dictionary.c  Entry.c  Entry.h  Exception.c  Exception.h  Fiber.c  Fiber.h  FreeList.c  GarbageCollector.c  GarbageCollector.h  Handle.c  Handle.h  Heap.c  Heap.h  HeapPage.c  HeapPage.h  Isolate.c  Isolate.h  Json.c  Json.h  Lookup.c  Lookup.h  Message.c  Message.h  Object.h  Parser.c  Primitives.c  Primitives.h  PrimitivesX64.c  (+21 more)
vm/compiler/: Ast.h  Bytecodes.h  Compiler.c  Compiler.h  Optimizer.c  Optimizer.h  Parser.c  Parser.h  Scope.c  Scope.h  Tokenizer.c  Variable.h
vm/concurrency/: Fiber.c  Fiber.h  Scheduler.c  Scheduler.h
vm/core/: Assert.h  Class.c  Class.h  CompiledCode.c  CompiledCode.h  Endian.h  Entry.c  Entry.h  Exception.c  Exception.h  Handle.c  Handle.h  Lookup.c  Lookup.h  Namespace.c  Namespace.h  Object.h  Smalltalk.c  Smalltalk.h  StackFrame.c  StackFrame.h  Thread.c  Thread.h
vm/jit/: Assembler.h  CodeDescriptors.h  CodeGenerator.h  InlineCache.c  InlineCache.h  PerfMap.c  PerfMap.h  PrimitivesGen.def  RegisterAllocator.c  RegisterAllocator.h  SendClassify.h  StubCode.c  StubCode.h  TargetAssembler.h  TargetCodePatch.h  TargetCpu.h  TargetEntry.h  TargetFiber.h  TargetPrimitives.h  TargetTraits.h  Tier.c  Tier.h
vm/memory/: FreeList.c  GarbageCollector.c  GarbageCollector.h  Heap.c  Heap.h  HeapPage.c  HeapPage.h  RememberedSet.h  Safepoint.c  Safepoint.h  Scavenger.c  Scavenger.h
vm/os/: Os.h  OsFile.h  OsSocket.h  OsThread.h
vm/runtime/: Base64.c  Base64.h  Collection.c  Collection.h  Dictionary.c  Dictionary.h  FileSystem.c  FileSystem.h  Iterator.c  Iterator.h  Json.c  Json.h  Message.c  Message.h  Primitives.c  Primitives.h  Socket.c  Socket.h  Stream.c  Stream.h  String.c  String.h
vm/tests/: EmitGoldenPpc64.c  EmitGoldenPpc64Bind.c  EmitGoldenPpc64Expected.h  EmitGoldenPpc64HostStub.c  EmitGoldenPpc64le.c  EmitGoldenPpc64leBind.c  EmitGoldenPpc64leExpected.h  EmitGoldenPpc64leHostStub.c  EmitGoldenX64.c  EmitGoldenX64Expected.h  SelfTests.c  SelfTests.h  TokenizerTest.c
vm/tools/: Bootstrap.c  Cli.h  Project.h  Repl.c  Snapshot.c  Snapshot.h
(+92 files in other folders)
